--- a/qBittorrent/config/qBittorrent.conf
+++ b/qBittorrent/config/qBittorrent.conf
@@ -27,7 +27,7 @@ Downloads\PreAllocation=true
 Downloads\UseIncompleteExtension=true
 Downloads\DiskWriteCacheSize=-1
 General\PreventFromSuspendWhenDownloading=true
-Queueing\IgnoreSlowTorrents=true
+Queueing\IgnoreSlowTorrents=false
 Queueing\MaxActiveDownloads=100
 Queueing\MaxActiveTorrents=50
 Queueing\MaxActiveUploads=50
