--- a/qBittorrent/config/qBittorrent.conf
+++ b/qBittorrent/config/qBittorrent.conf
@@ -22,7 +22,7 @@ Session\MaxUploads=-1
 Session\MaxUploadsPerTorrent=-1
 Session\MultiConnectionsPerIp=true
 Session\PexEnabled=true
-Session\Preallocation=true
+Session\Preallocation=false
 Session\QueueingSystemEnabled=false
 Session\SlowTorrentsDownloadRate=50
 Session\SlowTorrentsInactivityTimer=600
