--- a/qBittorrent/config/qBittorrent.conf
+++ b/qBittorrent/config/qBittorrent.conf
@@ -23,7 +23,7 @@ Bittorrent\MaxUploadsPerTorrent=-1
 Bittorrent\DHT=true
 Bittorrent\PeX=true
 Bittorrent\LSD=true
-Downloads\PreAllocation=true
+Downloads\PreAllocation=false
 Downloads\UseIncompleteExtension=true
 Downloads\DiskWriteCacheSize=-1
 General\PreventFromSuspendWhenDownloading=true
